// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should postprocess elements allow modifiy element metadata 1`] = `
Object {
  "attributes": Object {
    "align": Object {
      "deprecated": true,
    },
    "contenteditable": Object {
      "enum": Array [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": Object {
      "deprecated": true,
    },
    "datafld": Object {
      "deprecated": true,
    },
    "dataformatas": Object {
      "deprecated": true,
    },
    "datasrc": Object {
      "deprecated": true,
    },
    "dir": Object {
      "enum": Array [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": Object {
      "enum": Array [
        "true",
        "false",
      ],
    },
    "hidden": Object {
      "boolean": true,
    },
    "tabindex": Object {
      "enum": Array [
        /-\\?\\\\d\\+/,
      ],
    },
  },
  "flow": true,
  "permittedContent": Array [
    "@flow",
    "dt",
    "dd",
  ],
  "tagName": "i",
}
`;

exports[`parser should postprocess elements allow modifiy element metadata 2`] = `
Object {
  "attributes": Object {
    "contenteditable": Object {
      "enum": Array [
        "true",
        "false",
      ],
      "omit": true,
    },
    "contextmenu": Object {
      "deprecated": true,
    },
    "dir": Object {
      "enum": Array [
        "ltr",
        "rtl",
        "auto",
      ],
    },
    "draggable": Object {
      "enum": Array [
        "true",
        "false",
      ],
    },
    "hidden": Object {
      "boolean": true,
    },
    "tabindex": Object {
      "enum": Array [
        /-\\?\\\\d\\+/,
      ],
    },
  },
  "flow": true,
  "permittedContent": Array [
    "@phrasing",
  ],
  "phrasing": true,
  "tagName": "u",
}
`;
